--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/PrimeBank-LogoIcon-inverted.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Time Manager</title>
+    <title>PrimeBank | TimeManager</title>
   </head>
   <body>
     <div id="root"></div>
